<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    tools:context=".Principal2">

    <TextView
        android:id="@+id/LblMensaje"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:hint="Telefono : 00000000"
        android:textColor="@color/color_black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintHorizontal_bias="1.0" />
    <!-- Button Login -->
    <Button
        android:id="@+id/Button01"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/Login"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/Button03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <!-- Button  Ver -->
    <Button
        android:id="@+id/Button03"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/encuesta"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/ButtonEncuestasPendientes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/ButtonEncuestasPendientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/encuestaspendientes"
        app:layout_constraintLeft_toLeftOf="@+id/Button03"
        app:layout_constraintRight_toRightOf="@+id/Button03"
        app:layout_constraintBottom_toTopOf="@+id/btnuploadPhoto"
        android:textAllCaps="true"
        />

    <Button
        android:id="@+id/btnuploadPhoto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/fotosPendientes"
        android:textAllCaps="true"
        app:layout_constraintBottom_toTopOf="@+id/Button04"
        app:layout_constraintLeft_toLeftOf="@+id/ButtonEncuestasPendientes"
        app:layout_constraintRight_toRightOf="@+id/ButtonEncuestasPendientes"
        />
    <Button
        android:id="@+id/Button04"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/Salir"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>